# agenticoptio

./: .ant  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py  test_import.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: agenticflow.rst  chat.rst  embeddings.rst  index.rst
examples/: basic_usage.py  streaming_example.py
src/agenticoptio/: __init__.py
src/agenticoptio/core/: __init__.py  messages.py
src/agenticoptio/models/: __init__.py  base.py  ollama.py
