[project]
name = "agenticoptio"
version = "0.1.0"
description = "Production-grade multi-agent framework with minimal dependencies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Raja CSP Raman", email = "raja.csp@gmail.com" }]
keywords = ["ai", "llm", "chat", "embeddings", "ollama", "openai", "anthropic", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core dependencies (minimal for Ollama integration)
    "openai>=1.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
]

# No CLI scripts for this minimal library

[project.urls]
Documentation = "https://agenticoptio.readthedocs.io/en/latest/"
Source = "https://github.com/kactlabs/agenticoptio"
Homepage = "https://github.com/kactlabs/agenticoptio"
Repository = "https://github.com/kactlabs/agenticoptio"
Issues = "https://github.com/kactlabs/agenticoptio/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenticoptio"]

[tool.hatch.build.targets.sdist]
include = ["src/agenticoptio", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agenticoptio"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"


